# video-transcriber

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  transcribe.py  urls.txt
src/video_transcriber/: __init__.py  __main__.py  audio.py  config.py  downloader.py  exceptions.py  processor.py  transcriber.py  utils.py
